--- a/app.config
+++ b/app.config
@@ -14,8 +14,8 @@
     { port, 8080 },
     { workers, 256 },
     { timeout, 10000 },
-    { sync_stream, true },
-    % { stream_chunk_size, 4096 },
+    { sync_stream, false },
+    { stream_chunk_size, 4096 },
     { enable_gzip, true },
     { rewrite_rules, [
         % { "^http://[^/]+/mail/(.*)$", "http://mail.ru/\\1" }
